# ZY_RoboRTS

./: .gitignore  README.md  Read_For_Some.md
src/genshin_simulation/: CMakeLists.txt  for_user.md  package.xml  simulation_for_user.md  依赖什么的.md
src/genshin_simulation/differential_urdf/: car.xacro  demo01.urdf  laser.xacro  move.xacro  my_base.xacro  my_laser.xacro
src/genshin_simulation/launch/: HDL32_car_launch.py  VLP16_car_launch.py  only_gazebo_show_launch.py  three_wheel_launch.py
src/genshin_simulation/src/: teleop_twist_keyboard.cpp
src/genshin_simulation/urdf/: 4w_mecanum.xacro  HDL-32E.urdf.xacro  HDL-32E.xacro  VLP-16.urdf.xacro  VLP-16.xacro  fish_bot.xacro  my_camera.xacro  my_camera_sensor.xacro  my_car.xacro  my_car_HDL32.xacro  my_car_VLP16.xacro  my_imu.xacro  my_lidar.xacro  my_lidar_sensor.xacro  nexus_4wd_mecanum.gazebo
src/genshin_simulation/world/: 2023_v_4_1.world  2023rmus.world  2023rmus_full.world  2023rmus_true.world  test_world01.world
src/robot_localization/: CMakeLists.txt  localization_for_user.md  package.xml  第三方库依赖安装.md  第三方库安装.md
src/robot_localization/cmake/: CSM.cmake  ceres.cmake  g2o.cmake  glog.cmake  pcl.cmake  protobuf.cmake  sophus.cmake
src/robot_localization/config/: 3d_lidar.rviz  front_end.yaml  user_setting.yaml
src/robot_localization/config/params/: matching.yaml  odom_end.yaml
src/robot_localization/config/rviz/: sim_3d_lidar.rviz
src/robot_localization/include/data_pretreat/: data_pretreat_end_flow.hpp
src/robot_localization/include/global_defination/: global_defination.h.in
src/robot_localization/include/global_path_defination/: global_path.h  global_path.h.in
src/robot_localization/include/mapping/back_end/: back_end.hpp  back_end_flow.hpp
src/robot_localization/include/mapping/front_end/: front_end.hpp  front_end_flow.hpp
src/robot_localization/include/mapping/lidar_odom_end/: lidar_odom_end.hpp  lidar_odom_end_flow.hpp
src/robot_localization/include/mapping/loop_closing/: loop_closing.hpp  loop_closing_flow.hpp
src/robot_localization/include/mapping/matching_end/: matching_end.hpp  matching_end_flow.hpp
src/robot_localization/include/mapping/optimizing_end/: sliding_window.hpp  sliding_window_flow.hpp
src/robot_localization/include/matching/: matching.hpp  matching_flow.hpp
src/robot_localization/include/models/cloud_filter/: box_filter.hpp  cloud_filter_interface.hpp  no_filter.hpp  voxel_filter.hpp
src/robot_localization/include/models/graph_optimizer/: graph_optimizer_interface.hpp
src/robot_localization/include/models/graph_optimizer/g2o/: g2o_graph_optimizer.hpp
src/robot_localization/include/models/kalman_filter/: eskf.hpp  kalman_filter_interface.hpp
src/robot_localization/include/models/pre_integrator/: imu_pre_integrator.hpp  odo_pre_integrator.hpp  pre_integrator.hpp
src/robot_localization/include/models/registration/: icp_registration.hpp  icp_svd_registration.hpp  ndt_registration.hpp  registration_interface.hpp
src/robot_localization/include/models/registration/ndt_cpu/: NormalDistributionsTransform.h  Registration.h  SymmetricEigenSolver.h  VoxelGrid.h  ndt_cpu_registration.hpp
src/robot_localization/include/models/registration/sicp/: ICP.h  scip_registration.hpp
src/robot_localization/include/models/scan_distortion_adjust/: distortion_adjust.hpp
src/robot_localization/include/models/sliding_window/: ceres_sliding_window.hpp
src/robot_localization/include/models/undistortion/: scan_undistortion.hpp
src/robot_localization/include/publisher/: cloud_publisher.hpp  imu_publisher.hpp  odometry_publisher.hpp
src/robot_localization/include/sensor_data/: cloud_data.hpp  imu_data.hpp  key_frame.hpp  pose_data.hpp
src/robot_localization/include/subscriber/: cloud_subscriber.hpp  imu_subscriber.hpp  odometry_subscriber.hpp
src/robot_localization/include/tf/: tf_broadcaster.hpp  tf_listener.hpp
src/robot_localization/include/tools/: color_terminal.hpp  file_manager.hpp  tic_toc.hpp
src/robot_localization/launch/: localization_launch.py  localization_node.launch  simulink_localization.launch  simulink_localization_launch.py
src/robot_localization/src/: test_main.cpp
src/robot_localization/src/apps/: back_end_node.cpp  data_pretreat_end_node.cpp  front_end_node.cpp  lidar_odom_end_node.cpp  matching_end_node.cpp  matching_node.cpp  optimization_end_node.cpp  optimization_node.cpp  optimizing_end_node.cpp
src/robot_localization/src/data_pretreat/: data_pretreat_flow.cpp
src/robot_localization/src/mapping/front_end/: front_end.cpp  front_end_flow.cpp
src/robot_localization/src/mapping/lidar_odom_end/: lidar_odom_end.cpp  lidar_odom_end_flow.cpp
src/robot_localization/src/mapping/matching_end/: matching_end.cpp  matching_end_flow.cpp
src/robot_localization/src/mapping/optimizing_end/: sliding_window.cpp  sliding_window_flow.cpp
src/robot_localization/src/matching/: matching.cpp  matching_flow.cpp
src/robot_localization/src/models/cloud_filter/: box_filter.cpp  no_filter.cpp  voxel_filter.cpp
src/robot_localization/src/models/graph_optimizer/: interface_graph_optimizer.cpp
src/robot_localization/src/models/kalman_filter/: eskf.cpp  kalman_filter_interface.cpp
src/robot_localization/src/models/pre_integrator/: imu_pre_integrator.cpp  odo_pre_integrator.cpp
src/robot_localization/src/models/registration/: icp_registration.cpp  icp_svd_registration.cpp  ndt_regiatration.cpp
src/robot_localization/src/models/scan_distortion_adjust/: distortion_adjust.cpp
src/robot_localization/src/models/sliding_window/: ceres_sliding_window.cpp
src/robot_localization/src/publisher/: cloud_publisher.cpp  imu_publisher.cpp  odometry_publisher.cpp
src/robot_localization/src/sensor_data/: cloud_data.cpp  imu_data.cpp  key_frame.cpp  pose_data.cpp
src/robot_localization/src/subscriber/: cloud_subscriber.cpp  imu_subscriber.cpp  odometry_subscriber.cpp
src/robot_localization/src/tf/: tf_broadcaster.cpp  tf_listener.cpp
src/robot_localization/src/tools/: color_terminal.cpp  file_manager.cpp
(+20 files in other folders)
